services/grafana/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: grafana
          image: docker.io/grafana/grafana-oss
          ports:
            - name: web
              containerPort: 3000
