services/grafana/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://grafana.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: grafana
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: grafana
    gethomepage.dev/name: Grafana
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-nginx/htpasswd
    nginx.ingress.kubernetes.io/auth-realm: durbin.casa
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
